mesh/one.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: meshone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beacon-alpha-deployment
  namespace: meshone
  labels:
    app: beacon-alpha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beacon-alpha
  template:
    metadata:
      labels:
        app: beacon-alpha
    spec:
      containers:
      - name: beacon
        image: troydai/grpcbeacon:v0.4.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: beacon-alpha
  namespace: meshone
spec:
  selector:
    app: beacon-alpha
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beacon-beta-deployment
  namespace: meshone
  labels:
    app: beacon-beta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beacon-beta
  template:
    metadata:
      labels:
        app: beacon-beta
    spec:
      containers:
      - name: beacon
        image: troydai/grpcbeacon:v0.4.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: beacon-beta
  namespace: meshone
spec:
  selector:
    app: beacon-beta
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
