mesh/workloads.yml
apiVersion: v1
kind: Namespace
metadata:
  name: workload-alpha
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload-alpha
  namespace: workload-alpha
spec:
  replicas: 3
  selector:
    matchLabels:
      app: workload-alpha
  template:
    metadata:
      labels:
        app: workload-alpha
    spec:
      containers:
      - name: httpbin
        image: kong/httpbin:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: workload-alpha
  namespace: workload-alpha
spec:
  selector:
    app: workload-alpha
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: workload-alpha-np
  namespace: workload-alpha
spec:
  type: NodePort
  selector:
    app: workload-alpha
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30007
